--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/shivamsharma16-beep/missdeliriousubhttps://github.com/shivamsharma16-beep/deliriousub",
+  "repository": "https://github.com/shivamsharma16-beep/deliriousub",
   "website": "https://github.com/deliriousub",
   "success_url": "https://t.me/missdeliriousupdates",
   "env": {
